--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <i class="bi bi-telephone-fill"></i>  8089535273
         </div>
         <div class="contact-info">
-            <i class="bi bi-envelope-fill"></i> info@example.com
+            <i class="bi bi-envelope-fill"></i>Mediturempm@gmail.com
         </div>
         <div class="social-media">
             <a href=" https://www.instagram.com/mediture_consultancy" target="_blank"><i class="bi bi-instagram"></i></a>
