--- a/test.html
+++ b/test.html
@@ -3,80 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Footer with Address and Map</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+    <title>404 - Page Not Found</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        footer {
-            background-color: #0E2E50;
-            color: #fff;
-            padding: 40px 0;
+        body, html {
+            height: 100%;
+            margin: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #f8f9fa; /* Light background for the page */
+            color: #333; /* Text color */
+            font-family: Arial, sans-serif;
+        }
+        .container {
             text-align: center;
+            padding: 40px;
+            background-color: #ffffff; /* White box */
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
         }
-
-        footer a {
-            color: #fff;
-            margin: 0 10px;
-            transition: color 0.3s;
+        .error-code {
+            font-size: 6rem;
+            color: #B7773A; /* Primary color for the error code */
+            margin-bottom: 20px;
+            font-weight: bold;
         }
-
-        footer a:hover {
-            color: #B7773A;
-        }
-
-        .footer-section {
+        .error-message {
+            font-size: 1.5rem;
             margin-bottom: 20px;
         }
-
-        .google-map {
-            border: 0;
-            width: 100%;
-            height: 250px;
+        .error-description {
+            font-size: 1rem;
+            margin-bottom: 30px;
+            color: #666;
+        }
+        .home-button {
+            padding: 10px 20px;
+            background-color: #0E2E50; /* Primary button color */
+            color: #ffffff;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 1.2rem;
+            transition: background-color 0.3s ease;
+        }
+        .home-button:hover {
+            background-color: #B7773A; /* Hover effect */
         }
     </style>
 </head>
 <body>
-
-    <!-- Footer -->
-    <footer>
-        <div class="container">
-            <div class="row">
-                <!-- Address Section -->
-                <div class="col-md-4 footer-section">
-                    <h5>Our Office</h5>
-                    <p>
-                        Mediture Consultancy LLP<br>
-                        1234 Medical Plaza, Suite 500<br>
-                        New York, NY 10001, USA<br>
-                        Phone: +1 (234) 567-8901<br>
-                        Email: info@meditureconsultancy.com
-                    </p>
-                </div>
-                
-                <!-- Google Map Section -->
-                <div class="col-md-4 footer-section">
-                    <h5>Find Us Here</h5>
-                    <iframe class="google-map"
-                    src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJwZku-FSUpzsRchtdBikKmho&key=https://www.google.com/maps/place/Kottapadi,+Kerala/@10.6227209,76.0273312,16z/data=!3m1!4b1!4m6!3m5!1s0x3ba79454f82e99c1:0x1a9a0a29065d1b72!8m2!3d10.6225424!4d76.0362897!16zL20vMGZ6YzFw?entry=ttu">                        allowfullscreen="" 
-                        loading="lazy">
-                    </iframe>
-                </div>
-
-                <!-- Social Media & Copyright -->
-                <div class="col-md-4 footer-section">
-                    <h5>Stay Connected</h5>
-                    <p>Follow us on:</p>
-                    <p>
-                        <a href="#">Facebook</a> | 
-                        <a href="#">LinkedIn</a> | 
-                        <a href="#">Twitter</a>
-                    </p>
-                    <p>© 2024 Mediture Consultancy LLP. All rights reserved.</p>
-                </div>
-            </div>
+    <div class="container">
+        <div class="error-code">404</div>
+        <div class="error-message">Oops! Page Not Found</div>
+        <div class="error-description">
+            The page you are looking for might have been removed, had its name changed, or is temporarily unavailable.
         </div>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+        <a href="index.html" class="home-button">Go to Homepage</a>
+    </div>
 </body>
 </html>
