--- a/uaemoh.html
+++ b/uaemoh.html
@@ -61,8 +61,8 @@
                 <img src="img3/2.png" alt="Service Image">
             </div>
             <div class="col-md-8">
-                <h2>UAE MOH</h2>
-                <p>The Dubai Health Authority (DHA) mandates that healthcare professionals intend to work in Dubai. The Dataflow procedure undergoes exam registration, Registration( Credential), Dataflow(Verification). This process, managed by the DHA Data Flow Group, involves verifying the authenticity of educational degrees, work experience, and professional licenses. 
+                <h2  style="color: #B7773A;" class="head">UAE MOH</h2>
+                <p style="color: #0E2E50;">The Dubai Health Authority (DHA) mandates that healthcare professionals intend to work in Dubai. The Dataflow procedure undergoes exam registration, Registration( Credential), Dataflow(Verification). This process, managed by the DHA Data Flow Group, involves verifying the authenticity of educational degrees, work experience, and professional licenses. 
                     We deliver exceptional support for data flow processes, guaranteeing smooth operations and accurate documentation verification for our customers.
                     </p>
             </div>
@@ -72,7 +72,7 @@
         <div class="container">
             <div class="contact-form">
                 <h2>Contact Us</h2>
-                <form action="mailto:afnan.messaging@gmail.com" method="post" enctype="text/plain">
+                <form action="mailto:Mediturempm@gmail.com" method="post" enctype="text/plain">
                     <div class="mb-3">
                         <label for="name" class="form-label">Your Name</label>
                         <input type="text" class="form-control" id="name" name="name" required>
@@ -94,10 +94,41 @@
    
 
 
-    <footer class="mt-3">
+    <footer>
         <div class="container">
-            <p>© 2024 Mediture Consultancy LLP. All rights reserved.</p>
-            <p>Follow us on: <a href="#">Facebook</a> | <a href="#">LinkedIn</a> | <a href="#">Twitter</a></p>
+            <div class="row">
+                <!-- Address Section -->
+                <div class="col-md-4 footer-section">
+                    <h5>Our Office</h5>
+                    <p>
+                        Mediture Consultancy LLP<br>
+                        : 21/265B, Kalappadan Building,<br> Mylappuram,<br> Tirur Road, Downhill PO,<br> Malappuram, Kerala,<br> PIN-676519
+                    </p>
+                </div>
+                
+                <!-- Google Map Section -->
+                <div class="col-md-4 footer-section">
+                    <h5>Find Us Here</h5>
+                    <iframe class="google-map"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3932.188239929485!2d76.0273312!3d10.6227209!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba79454f82e99c1%3A0x1a9a0a29065d1b72!2sKottapadi%2C%20Kerala!5e0!3m2!1sen!2sin!4v1692626210409!5m2!1sen!2sin" 
+                    allowfullscreen="" 
+                        loading="lazy">
+                    </iframe>
+                </div>
+
+                <!-- Social Media & Copyright -->
+                <div class="col-md-4 footer-section">
+                    <h5>Stay Connected</h5>
+                    <p>Follow us on:</p>
+                    <p>
+                        <a href="https://www.facebook.com/mediture22">Facebook</a> | 
+                        <a href="www.linkedin.com/in/mediture-consultancy-b841512a8
+                        ">LinkedIn</a> | 
+                        <a href="https://www.instagram.com/mediture_consultancy">Instagram</a>
+                    </p>
+                    <p>© 2024 Mediture Consultancy LLP. All rights reserved.</p>
+                </div>
+            </div>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-J0XWcGAG6+R6/xySHghm5ydwHTXJRq5OhfpThV0u81An7nd7yJtBOisV+ERvRjmI" crossorigin="anonymous"></script>
