--- a/test.html
+++ b/test.html
@@ -40,7 +40,7 @@
         }
         .home-button {
             padding: 10px 20px;
-            background-color: #0E2E50; /* Primary button color */
+            background-color: #0C3C35; /* Primary button color */
             color: #ffffff;
             text-decoration: none;
             border-radius: 5px;
@@ -48,7 +48,7 @@
             transition: background-color 0.3s ease;
         }
         .home-button:hover {
-            background-color: #B7773A; /* Hover effect */
+            background-color: #B7773A; 
         }
     </style>
 </head>
