--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
+    <link rel="icon" href="img3/Screenshot_16.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Moderustic:wght@300..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -45,11 +45,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About Us</a>
                     </li>
+                    <!-- <li class="nav-item">
+                        <a class="nav-link" href="mailus.html">Blog</a>
+                    </li> -->
                     <li class="nav-item">
-                        <a class="nav-link" href="test.html">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="test.html">Contact Us</a>
+                        <a class="nav-link" href="mailus.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
@@ -114,6 +114,11 @@
                         Mediture Consultancy LLP<br>
                         21/265B, Kalappadan Building,<br> Mylappuram,<br> Tirur Road, Downhill PO,<br> Malappuram, Kerala,<br> PIN-676519
                     </p>
+                    <h5>Contact</h5>
+                <p>
+                    Gmail: Mediturempm@gmail.com <br>
+                    Phone: +91 8089535273
+                </p>
                 </div>
     
                 <!-- Quick Links Section -->
@@ -121,8 +126,8 @@
                     <h5>Quick Links</h5>
                     <ul style="list-style: none; padding: 0;">
                         <li><a href="about.html" style="color: white; text-decoration: none;">About Us</a></li>
-                    <li><a href="test.html" style="color: white; text-decoration: none;">Contact Us</a></li>
-                    <li><a href="test.html" style="color: white; text-decoration: none;">Blog</a></li>
+                    <li><a href="mailus.html" style="color: white; text-decoration: none;">Contact Us</a></li>
+                    <!-- <li><a href="mailus.html" style="color: white; text-decoration: none;">Blog</a></li> -->
                     <li><a href="index.html" style="color: white; text-decoration: none;">Home</a></li>
                     </ul>
                 </div>
@@ -131,7 +136,7 @@
                 <div class="col-md-4 footer-section">
                     <h5>Find Us Here</h5>
                     <iframe class="google-map" width="100%" height="150" frameborder="0"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3932.188239929485!2d76.0273312!3d10.6227209!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba79454f82e99c1%3A0x1a9a0a29065d1b72!2sKottapadi%2C%20Kerala!5e0!3m2!1sen!2sin!4v1692626210409!5m2!1sen!2sin" 
+                        src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=mediture%20consaltancy+(mediture)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed" 
                         allowfullscreen="" 
                         loading="lazy">
                     </iframe>
