--- a/ielts.html
+++ b/ielts.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="dha.css">
     <link rel="icon" href="img3/Screenshot_16.png" type="image/x-icon">
 
-    <title>UAE MOH</title>
+    <title>IELTS</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
@@ -58,12 +58,13 @@
     <div class="container">
         <div class="row align-items-center content-box">
             <div class="col-md-4 text-center">
-                <img src="img3/2.png" alt="Service Image">
+                <img src="img/international-english-language-testing-system-ielts-vector-logo-small-removebg-preview.png" alt="Service Image">
             </div>
             <div class="col-md-8">
-                <h2  style="color: #B7773A;" class="head">UAE MOH</h2>
-                <p style="color: #0C3C35;">The Dubai Health Authority (DHA) mandates that healthcare professionals intend to work in Dubai. The Dataflow procedure undergoes exam registration, Registration( Credential), Dataflow(Verification). This process, managed by the DHA Data Flow Group, involves verifying the authenticity of educational degrees, work experience, and professional licenses. 
-                    We deliver exceptional support for data flow processes, guaranteeing smooth operations and accurate documentation verification for our customers.
+                <h2 class="head" style="color: #B7773A;" class="head">DHA(Dubai)</h2>
+                <p style="color: #0E2E50;">The IELTS (International English Language Testing System) is a standardized test designed to assess English language proficiency. It is commonly used for university admissions, employment, and immigration purposes. The test evaluates four key skills: Listening, Reading, Writing, and Speaking. There are two versions: Academic, for those seeking higher education or professional registration, and General Training, for those migrating to an English-speaking country or seeking work experience. Scores are reported on a scale from 1 to 9, with 9 being the highest level of proficiency.
+
+
                     </p>
             </div>
         </div>
@@ -109,10 +110,10 @@
                         21/265B, Kalappadan Building,<br> Mylappuram,<br> Tirur Road, Downhill PO,<br> Malappuram, Kerala,<br> PIN-676519
                     </p>
                     <h5>Contact</h5>
-                    <p>
-                        Gmail: Mediturempm@gmail.com <br>
-                        Phone: +91 8089535273
-                    </p>
+                <p>
+                    Gmail: Mediturempm@gmail.com <br>
+                    Phone: +91 8089535273
+                </p>
                 </div>
     
                 <!-- Quick Links Section -->
@@ -120,7 +121,7 @@
                     <h5>Quick Links</h5>
                     <ul style="list-style: none; padding: 0;">
                         <li><a href="about.html" style="color: white; text-decoration: none;">About Us</a></li>
-                        <li><a href="mailus.html" style="color: white; text-decoration: none;">Get quote</a></li>
+                        <li><a href="mailus.html" style="color: white; text-decoration: none;">Contact Us</a></li>
                         <!-- <li><a href="mailus.html" style="color: white; text-decoration: none;">Blog</a></li> -->
                         <li><a href="index.html" style="color: white; text-decoration: none;">Home</a></li>
                     </ul>
