--- a/kaps.html
+++ b/kaps.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="dha.css">
     <link rel="icon" href="img3/Screenshot_16.png" type="image/x-icon">
 
-    <title>UAE MOH</title>
+    <title>KAPS</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
@@ -38,7 +38,7 @@
         
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img3/Brown Blue Denim Jeans Fashion Sale Website Banner.png" alt="carousal 1" class="d-block w-100">
+                <img src="img3/Brown Blue Denim Jeans Fashion Sale Website Banner.png"  alt="carousal 1" class="d-block w-100">
                 <div class="carousel-caption">
                     <h1>Services</h1>
                     
@@ -58,12 +58,14 @@
     <div class="container">
         <div class="row align-items-center content-box">
             <div class="col-md-4 text-center">
-                <img src="img3/2.png" alt="Service Image">
+                <img src="img3/unnamed-removebg-preview.png" alt="Service Image">
             </div>
             <div class="col-md-8">
-                <h2  style="color: #B7773A;" class="head">UAE MOH</h2>
-                <p style="color: #0C3C35;">The Dubai Health Authority (DHA) mandates that healthcare professionals intend to work in Dubai. The Dataflow procedure undergoes exam registration, Registration( Credential), Dataflow(Verification). This process, managed by the DHA Data Flow Group, involves verifying the authenticity of educational degrees, work experience, and professional licenses. 
-                    We deliver exceptional support for data flow processes, guaranteeing smooth operations and accurate documentation verification for our customers.
+                <h2 class="head" style="color: #B7773A;" class="head">KAPS</h2>
+                <p style="color: #0E2E50;">Embarking on a career as a pharmacist in Australia is a promising and fulfilling journey that involves navigating the comprehensive licensure process overseen by the Pharmacy Board of Australia and the Australian Pharmacy Council. For international pharmacy graduates, a critical step in this journey is the Knowledge Assessment of Pharmaceutical Sciences (KAPS) exam. 
+
+The KAPS exam evaluates your knowledge and understanding of pharmaceutical sciences, confirming your readiness to practice safely and effectively within an Australian context. The Australian Pharmacy Council (APC) supports overseas-trained pharmacists through this assessment process, facilitating their registration and enabling them to gain experience in Australia.
+
                     </p>
             </div>
         </div>
@@ -120,7 +122,7 @@
                     <h5>Quick Links</h5>
                     <ul style="list-style: none; padding: 0;">
                         <li><a href="about.html" style="color: white; text-decoration: none;">About Us</a></li>
-                        <li><a href="mailus.html" style="color: white; text-decoration: none;">Get quote</a></li>
+                        <li><a href="mailus.html" style="color: white; text-decoration: none;">Contact Us</a></li>
                         <!-- <li><a href="mailus.html" style="color: white; text-decoration: none;">Blog</a></li> -->
                         <li><a href="index.html" style="color: white; text-decoration: none;">Home</a></li>
                     </ul>
