--- a/kspc.html
+++ b/kspc.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="dha.css">
     <link rel="icon" href="img3/Screenshot_16.png" type="image/x-icon">
 
-    <title>UAE MOH</title>
+    <title>Saudi Prometric</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
@@ -58,12 +58,19 @@
     <div class="container">
         <div class="row align-items-center content-box">
             <div class="col-md-4 text-center">
-                <img src="img3/2.png" alt="Service Image">
+                <img src="img3/logo__2_-removebg-preview.png" alt="Service Image">
             </div>
             <div class="col-md-8">
-                <h2  style="color: #B7773A;" class="head">UAE MOH</h2>
-                <p style="color: #0C3C35;">The Dubai Health Authority (DHA) mandates that healthcare professionals intend to work in Dubai. The Dataflow procedure undergoes exam registration, Registration( Credential), Dataflow(Verification). This process, managed by the DHA Data Flow Group, involves verifying the authenticity of educational degrees, work experience, and professional licenses. 
-                    We deliver exceptional support for data flow processes, guaranteeing smooth operations and accurate documentation verification for our customers.
+                <h2 style="color: #B7773A;" class="head">KSPC Good Standing Certificate-</h2>
+                <p style="color: #0C3C35;">To obtain a Good Standing Certificate from the Kerala State Pharmacy Council, you'll need to follow specific procedures to demonstrate that you are in compliance with professional standards and regulations  <br>
+                    1.Check Eligibility: Ensure your registration is active and compliant with council regulations. <br>
+                    2.Complete Application: Fill out the Good Standing Certificate application form. <br>
+                    3.Prepare Documents: Include your registration certificate, proof of professional conduct, and payment receipt. <br>
+                    4.Pay Fee: Pay the applicable fee and obtain a receipt. <br>
+                    5.Submit Application: Send the completed form, documents, and fee receipt to the Kerala State Pharmacy Council office. <br>
+                    6.Await Processing: Wait for the council to process your request. <br>
+                    7.Receive Certificate: Collect your certificate as instructed by the council. <br>
+
                     </p>
             </div>
         </div>
@@ -120,8 +127,8 @@
                     <h5>Quick Links</h5>
                     <ul style="list-style: none; padding: 0;">
                         <li><a href="about.html" style="color: white; text-decoration: none;">About Us</a></li>
-                        <li><a href="mailus.html" style="color: white; text-decoration: none;">Get quote</a></li>
-                        <!-- <li><a href="mailus.html" style="color: white; text-decoration: none;">Blog</a></li> -->
+                        <li><a href="mailus.html" style="color: white; text-decoration: none;">Contact Us</a></li>
+                        <li><a href="mailus.html" style="color: white; text-decoration: none;">Blog</a></li>
                         <li><a href="index.html" style="color: white; text-decoration: none;">Home</a></li>
                     </ul>
                 </div>
