--- a/test.html
+++ b/test.html
@@ -3,63 +3,172 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Page Not Found</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <title>Review Section</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" href="img3/Screenshot_16.png" type="image/x-icon">
     <style>
-        body, html {
-            height: 100%;
-            margin: 0;
+        .review-container {
+            padding: 20px;
+        }
+
+        .review-box {
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            margin-bottom: 20px;
+        }
+
+        .review-header {
             display: flex;
             align-items: center;
-            justify-content: center;
-            background-color: #f8f9fa; /* Light background for the page */
-            color: #333; /* Text color */
-            font-family: Arial, sans-serif;
+            margin-bottom: 15px;
         }
-        .container {
-            text-align: center;
-            padding: 40px;
-            background-color: #ffffff; /* White box */
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+
+        .review-header img {
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            margin-right: 15px;
         }
-        .error-code {
-            font-size: 6rem;
-            color: #B7773A; /* Primary color for the error code */
-            margin-bottom: 20px;
+
+        .review-name {
             font-weight: bold;
-        }
-        .error-message {
-            font-size: 1.5rem;
-            margin-bottom: 20px;
-        }
-        .error-description {
-            font-size: 1rem;
-            margin-bottom: 30px;
-            color: #666;
-        }
-        .home-button {
-            padding: 10px 20px;
-            background-color: #0C3C35; /* Primary button color */
-            color: #ffffff;
-            text-decoration: none;
-            border-radius: 5px;
             font-size: 1.2rem;
-            transition: background-color 0.3s ease;
+            color: #0E2E50;
         }
-        .home-button:hover {
-            background-color: #B7773A; 
+
+        .review-rating {
+            color: #FFD700;
+        }
+
+        .review-text {
+            color: #333;
+            font-size: 1rem;
+            line-height: 1.5;
+        }
+
+        .review-box.hidden {
+            display: none;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="error-code">404</div>
-        <div class="error-message">Oops! Page Not Found</div>
-        <div class="error-description">
-            The page you are looking for might have been removed, had its name changed, or is temporarily unavailable.
+    <div class="container review-container">
+        <h2 class="text-center mb-4">Reviews</h2>
+        
+        <!-- Review Box 1 -->
+        <div class="review-box">
+            <div class="review-header">
+                <img src="https://via.placeholder.com/60" alt="User Profile">
+                <div>
+                    <div class="review-name">John Doe</div>
+                    <div class="review-rating">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-half"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="review-text">
+                The service was excellent, and I would highly recommend it to anyone looking for a quality experience.
+            </div>
         </div>
-        <a href="index.html" class="home-button">Go to Homepage</a>
+
+        <!-- Review Box 2 -->
+        <div class="review-box">
+            <div class="review-header">
+                <img src="https://via.placeholder.com/60" alt="User Profile">
+                <div>
+                    <div class="review-name">Jane Smith</div>
+                    <div class="review-rating">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="review-text">
+                Outstanding experience! The staff was friendly, and the whole process was seamless.
+            </div>
+        </div>
+
+        <!-- Review Box 3 (hidden by default) -->
+        <div class="review-box hidden">
+            <div class="review-header">
+                <img src="https://via.placeholder.com/60" alt="User Profile">
+                <div>
+                    <div class="review-name">Alice Johnson</div>
+                    <div class="review-rating">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="review-text">
+                Very good service, but there is room for improvement in certain areas.
+            </div>
+        </div>
+
+        <!-- Review Box 4 (hidden by default) -->
+        <div class="review-box hidden">
+            <div class="review-header">
+                <img src="https://via.placeholder.com/60" alt="User Profile">
+                <div>
+                    <div class="review-name">Michael Brown</div>
+                    <div class="review-rating">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star"></i>
+                        <i class="bi bi-star"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="review-text">
+                The experience was average, with both positive and negative aspects.
+            </div>
+        </div>
+
+        <!-- Review Box 5 (hidden by default) -->
+        <div class="review-box hidden">
+            <div class="review-header">
+                <img src="https://via.placeholder.com/60" alt="User Profile">
+                <div>
+                    <div class="review-name">Emily Davis</div>
+                    <div class="review-rating">
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="review-text">
+                Amazing service! I will definitely be using it again in the future.
+            </div>
+        </div>
+
+        <!-- See More Button -->
+        <div class="text-center mt-3">
+            <button class="btn btn-primary" id="seeMoreBtn">See More</button>
+        </div>
     </div>
+
+    <script>
+        document.getElementById('seeMoreBtn').addEventListener('click', function() {
+            const hiddenReviews = document.querySelectorAll('.review-box.hidden');
+            hiddenReviews.forEach(review => review.classList.remove('hidden'));
+            this.style.display = 'none';
+        });
+    </script>
 </body>
 </html>
