--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
                     </p>
                     <h5>Contact</h5>
                 <p>
-                    Gmail: Mediturempm@gmail.com <br>
+                    Email: Mediturempm@gmail.com <br>
                     Phone: +91 8089535273
                 </p>
                 </div>
