--- a/mailus.html
+++ b/mailus.html
@@ -77,7 +77,7 @@
                             <label for="body" class="form-label">Body:</label>
                             <textarea class="form-control" id="body" name="body" rows="5" required></textarea>
                         </div>
-                        <button type="button" class="btn btn-primary w-100" onclick="sendEmail()">Send Email</button>
+                        <button type="button" class="btn w-100" style="background-color: #B7773A;" onclick="sendEmail()">Send Email</button>
                     </form>
                 </div>
             </div>
