--- a/kaps.html
+++ b/kaps.html
@@ -112,7 +112,7 @@ The KAPS exam evaluates your knowledge and understanding of pharmaceutical scien
                     </p>
                     <h5>Contact</h5>
                     <p>
-                        Gmail: Mediturempm@gmail.com <br>
+                        Email: Mediturempm@gmail.com <br>
                         Phone: +91 8089535273
                     </p>
                 </div>
