--- a/about.html
+++ b/about.html
@@ -101,6 +101,17 @@
             <div class="col-md-6 text-center mission-image">
                 <img src="img/eye-40889_1280 (1).png" alt="Mediature" class="img-fluid">
             </div>
+            <div class="row align-items-center">
+                <div class="col-md-6 text-center mission-image">
+                    <img src="img/png-clipart-up-stairs-computer-icons-steps-angle-text-removebg-preview.png" alt="Mediature" class="img-fluid">
+                </div>
+                <div class="col-md-6 mission-text">
+                    <h2 class="head">Our  <span style="color: #B7773A;">Strategy</span></h2>
+                    <p class="lead mt-4" style="color: #0E2E50;">We deliver exceptional service with competitive pricing, fast procedures, and clear communication. Our goal is to ensure client satisfaction through transparent, risk-free experiences and expert advice.
+
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
 
