--- a/ielts.html
+++ b/ielts.html
@@ -58,10 +58,10 @@
     <div class="container">
         <div class="row align-items-center content-box">
             <div class="col-md-4 text-center">
-                <img src="img/international-english-language-testing-system-ielts-vector-logo-small-removebg-preview.png" alt="Service Image">
+                <img src="img3/international-english-language-testing-system-ielts-vector-logo-small-removebg-preview.png" alt="Service Image">
             </div>
             <div class="col-md-8">
-                <h2 class="head" style="color: #B7773A;" class="head">DHA(Dubai)</h2>
+                <h2 class="head" style="color: #B7773A;" class="head">IELTS</h2>
                 <p style="color: #0E2E50;">The IELTS (International English Language Testing System) is a standardized test designed to assess English language proficiency. It is commonly used for university admissions, employment, and immigration purposes. The test evaluates four key skills: Listening, Reading, Writing, and Speaking. There are two versions: Academic, for those seeking higher education or professional registration, and General Training, for those migrating to an English-speaking country or seeking work experience. Scores are reported on a scale from 1 to 9, with 9 being the highest level of proficiency.
 
 
@@ -76,7 +76,7 @@
                 <form action="mailto:Mediturempm@gmail.com" method="post" enctype="text/plain">
                     <div class="mb-3">
                         <label for="name" class="form-label">Your Name</label>
-                        <input type="text" class="form-control" id="name" name="name" required>
+                        <input type="text" class="form-control" id="name1" name="name" required>
                     </div>
                     <div class="mb-3">
                         <label for="email" class="form-label">Your Email</label>
@@ -84,13 +84,13 @@
                     </div>
                     <div class="mb-3">
                         <label for="number" class="form-label">Phone</label>
-                        <input type="text" class="form-control" id="email" name="number" required>
+                        <input type="text" class="form-control" id="phone" name="number" required>
                     </div>
                     <div class="mb-3">
                         <label for="message" class="form-label">Your Message</label>
-                        <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
+                        <textarea class="form-control" id="body" name="message" rows="5" required></textarea>
                     </div>
-                    <button type="submit" class="btn">Send Message</button>
+                    <button type="submit" class="btn" onclick="sendEmail()">Send Message</button>
                 </form>
             </div>
         </div>
@@ -158,6 +158,25 @@
     
     
         <!--------Footer--------------->
+        <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script>
+        function sendEmail() {
+            Email.send({
+                Host: "smtp.elasticemail.com",
+                Username: "info@mediture.in",
+                Password: "288427A32E35CD4325E411D4416194B2C790",
+                To: 'mediturempm@gmail.com',
+                From: "info@mediture.in",
+                Name:document.getElementById("name1").value,
+                Phone:document.getElementById("phone").value,
+                Subject: document.getElementById("subject").value,
+                Body: document.getElementById("body").value,
+                Port: 2525
+            }).then(
+                message => alert(message)
+            );
+        }
+    </script>
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-J0XWcGAG6+R6/xySHghm5ydwHTXJRq5OhfpThV0u81An7nd7yJtBOisV+ERvRjmI" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
