--- a/mailus.html
+++ b/mailus.html
@@ -59,25 +59,26 @@
             <!-- Form Section -->
             <div class="col-md-8">
                 <div class="form-container">
+                    <img src="img/doctor-nurses-special-equipment (1) (1).jpg" alt="Banner Image">
                     <h2>Send Message</h2>
                     <form id="emailForm">
                         <div class="mb-3">
                             <label for="toEmail" class="form-label">Name</label>
-                            <input type="text" class="form-control" required>
+                            <input type="text" class="form-control" required id="name1">
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Phone</label>
-                            <input type="text" class="form-control" required>
+                            <input type="text" class="form-control" id="phone" required>
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Gmail</label>
                             <input type="text" class="form-control" required>
                         </div>
                         <div class="mb-3">
-                            <label for="body" class="form-label">Body:</label>
+                            <label for="body" class="form-label">Subject</label>
                             <textarea class="form-control" id="body" name="body" rows="5" required></textarea>
                         </div>
-                        <button type="button" class="btn w-100" style="background-color: #B7773A;" onclick="sendEmail()">Send Email</button>
+                        <button type="button" class="btn w-100" style="background-color: #B7773A;" onclick="sendEmail()">Submit</button>
                     </form>
                 </div>
             </div>
@@ -92,8 +93,10 @@
                 Host: "smtp.elasticemail.com",
                 Username: "info@mediture.in",
                 Password: "288427A32E35CD4325E411D4416194B2C790",
-                To: '',
+                To: 'mediturempm@gmail.com',
                 From: "info@mediture.in",
+                Name:document.getElementById("name1").value,
+                Phone:document.getElementById("phone").value,
                 Subject: document.getElementById("subject").value,
                 Body: document.getElementById("body").value,
                 Port: 2525
